2011-02-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set to version to 3.2.3.

2011-02-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.2.2 release.

	* CHANGES: Updated.

2011-02-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Log feed name, version and NVT count
	before and after each sync.

2011-02-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-nvt-sync.in: Remove last bashism from
	openvas-nvt-sync: Refer to signals by name, not by number.

2011-02-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/preferences.h: Remove unimplemented function declaration for
	preferences_get_delay_between_tests.

2011-02-16  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set to version to 3.2.2.

2011-02-16  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.2.1 release.

	* CHANGES: Updated.

2011-02-16  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/preferences.c: Add default value for the preference
	"unscanned_closed".

2011-02-15  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Remove redundant rsync flag. Spotted by
	Lukas Grunwald.

2011-02-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Clean up bashisms, make checks for command
	availability more reliable.

2011-02-11  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Improve behaviour when no init scripts are
	available.

2011-02-09  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Ensure OPENVAS_CACHE_DIR and OPENVAS_NVT_DIR are
	created on install.

2011-02-09  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Eliminate trailing whitespace in flags as it leads
	to trouble. Replace use of deprecated exec_program with
	execute_process.
