@@ -1,3 +1,13 @@
+2011-03-02  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	Enable the generation of code documentation. Spotted by Michael Meyer.
+
+	* doc/CMakeLists.txt: New. Add to enable the generation of code
+	documentation.
+
+	* doc/Doxyfile.in, doc/Doxyfile_full.in: Fix value of INPUT to match
+	the current paths.
+
 2011-02-21  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	Post release version bump.
